--- a/style.css
+++ b/style.css
@@ -1,41 +1,62 @@
 table {
     border-collapse: collapse;
-    border: 2px solid rgb(140 140 140);
     font-family: sans-serif;
     font-size: 0.8rem;
     letter-spacing: 1px;
-  }
+    text-align: center;
+    outline: 60px solid #EDEDED; /* Grey outline */
+    background-color: #ffffff; /* Optional light grey background */
+    border: 2px solid rgb(0, 0, 0);
+    position: absolute;
+    width: 750px;
+    margin: 15%;
+   }
+
   
   caption {
-    caption-side: bottom;
-    padding: 10px;
+    caption-side: top;
+    padding: 32px;
+    font-size: 32px;
+    font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
-  }
+    background-color: #09232E;
+    color: whitesmoke;  
+    }
   
+    h1 {
+      font-family: 'Times New Roman', Times, serif;
+      font-weight: bold;
+    }
+      
+    h2 {
+      font-family: 'Times New Roman', Times, serif;
+      font-weight: bold;
+      font-size: 20px;
+      text-align: left;
+    }
+
+    h3 {
+      border: 10px solid #2680EB;
+    }
+
   thead,
   tfoot {
-    background-color: rgb(228 240 245);
+    background-color: rgb(255, 255, 255);
   }
   
   th,
   td {
-    border: 1px solid rgb(160 160 160);
-    padding: 8px 10px;
+    padding: 8px 2px;
+    background-color: #ffffff;
   }
-  
-  td:last-of-type {
-    text-align: center;
-  }
-  
-  tbody > tr:nth-of-type(even) {
-    background-color: rgb(237 238 242);
-  }
-  
   tfoot th {
-    text-align: right;
-  }
+    text-align: center;
+    background-color: #ffffff;
+    border: 18px solid rgb(255, 255, 255);        
+    }
   
   tfoot td {
     font-weight: bold;
+    
   }
-  
+    
